test/spec_vectors/simd_conversions/fail/module_49.wat
(module (func $i16x8.narrow_i32x4_u-arg-empty (result v128) (i16x8.narrow_i32x4_u)))